--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.7.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "request": "^2.81.0"
